--- a/config/database.yml
+++ b/config/database.yml
@@ -15,9 +15,10 @@ default: &default
   host: <%= ENV["DB_HOST"] %>
 
 development:
-  <<: *default
-  database: m_chat_development
-  port: 3306
+  adapter: sqlite3
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
